--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build",
+    "serve-static": "npx serve out",
     "start": "next start",
     "lint": "next lint"
   },
